[project]
name = "fontra"
version = "0.3.0"
description = "Some small work with fonts."
authors = [
    {name = "HivertMoZara", email = "worldmozara@163.com"},
]
license = {text = "MIT"}
dependencies = ["freetype-py>=2,<3", "typing_extensions>=4.6.0,<5", "typer>=0.12.4", "rich>=10.11"]
requires-python = ">=3.9"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/NCBM/fontra"
Repository = "https://github.com/NCBM/fontra"

[project.scripts]
fontra = "fontra.__main__:app"

[project.optional-dependencies]
tools = [
    "fontTools>=4.53.1",
]

[tool.pyright]
pythonVersion = "3.9"
