[project]
name = "fontra"
version = "0.5.2"
description = "Font indexing and querying support like fontconfig."
authors = [
    {name = "HivertMoZara", email = "worldmozara@163.com"},
]
license = {text = "MIT"}
dependencies = [
    "freetype-py>=2.5.1,<3",
    "typing_extensions>=4.6.0,<5",
    "typer>=0.12.4",
    "rich>=10.11",
]
requires-python = ">=3.9"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Text Processing :: Fonts",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/NCBM/fontra"
Repository = "https://github.com/NCBM/fontra"

[project.scripts]
fontra = "fontra.__main__:app"

[project.optional-dependencies]
dev = [
    "freetype-py-stubs>=2.5.1,<3",
]
tools = [
    "fontTools>=4.53.1",
]

[tool.pyright]
pythonVersion = "3.9"
